--- a/app/src/main/res/drawable/launch_screen.xml
+++ b/app/src/main/res/drawable/launch_screen.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
     <item
-        android:drawable="@color/grey"/>
+        android:drawable="@color/md_theme_dark_onSurfaceVariant"/>
     <item
         android:drawable="@drawable/vinyl"
         android:gravity="center"/>
