--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,64 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="grey">#454040</color>
+    <color name="seed">#006a65</color>
+    <color name="md_theme_light_primary">#006A65</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#70F7EE</color>
+    <color name="md_theme_light_onPrimaryContainer">#00201E</color>
+    <color name="md_theme_light_secondary">#00677C</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#B1ECFF</color>
+    <color name="md_theme_light_onSecondaryContainer">#001F27</color>
+    <color name="md_theme_light_tertiary">#006C51</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#83F8CE</color>
+    <color name="md_theme_light_onTertiaryContainer">#002117</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#F3FFFA</color>
+    <color name="md_theme_light_onBackground">#00201A</color>
+    <color name="md_theme_light_surface">#F3FFFA</color>
+    <color name="md_theme_light_onSurface">#00201A</color>
+    <color name="md_theme_light_surfaceVariant">#DAE5E3</color>
+    <color name="md_theme_light_onSurfaceVariant">#3F4947</color>
+    <color name="md_theme_light_outline">#6F7978</color>
+    <color name="md_theme_light_inverseOnSurface">#B7FFEC</color>
+    <color name="md_theme_light_inverseSurface">#00382E</color>
+    <color name="md_theme_light_inversePrimary">#4FDAD2</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#006A65</color>
+    <color name="md_theme_light_outlineVariant">#BEC9C7</color>
+    <color name="md_theme_light_scrim">#000000</color>
+    <color name="md_theme_dark_primary">#4FDAD2</color>
+    <color name="md_theme_dark_onPrimary">#003734</color>
+    <color name="md_theme_dark_primaryContainer">#00504C</color>
+    <color name="md_theme_dark_onPrimaryContainer">#70F7EE</color>
+    <color name="md_theme_dark_secondary">#58D6F7</color>
+    <color name="md_theme_dark_onSecondary">#003641</color>
+    <color name="md_theme_dark_secondaryContainer">#004E5E</color>
+    <color name="md_theme_dark_onSecondaryContainer">#B1ECFF</color>
+    <color name="md_theme_dark_tertiary">#65DBB3</color>
+    <color name="md_theme_dark_onTertiary">#003829</color>
+    <color name="md_theme_dark_tertiaryContainer">#00513D</color>
+    <color name="md_theme_dark_onTertiaryContainer">#83F8CE</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#00201A</color>
+    <color name="md_theme_dark_onBackground">#79F8DC</color>
+    <color name="md_theme_dark_surface">#00201A</color>
+    <color name="md_theme_dark_onSurface">#79F8DC</color>
+    <color name="md_theme_dark_surfaceVariant">#3F4947</color>
+    <color name="md_theme_dark_onSurfaceVariant">#BEC9C7</color>
+    <color name="md_theme_dark_outline">#889391</color>
+    <color name="md_theme_dark_inverseOnSurface">#00201A</color>
+    <color name="md_theme_dark_inverseSurface">#79F8DC</color>
+    <color name="md_theme_dark_inversePrimary">#006A65</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#4FDAD2</color>
+    <color name="md_theme_dark_outlineVariant">#3F4947</color>
+    <color name="md_theme_dark_scrim">#000000</color>
 </resources>
