--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -4,15 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context=".PlayerActivity"
-    android:gravity="center">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_weight="1">
 
         <ImageButton
             android:id="@+id/imageButton6"
@@ -21,6 +23,7 @@
             android:layout_marginStart="5dp"
             android:background="@android:color/transparent"
             android:contentDescription="@string/back_btn"
+            android:padding="10dp"
             android:src="@drawable/back" />
 
         <TextView
@@ -30,7 +33,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="@string/app_name"
-            android:textSize="20sp" />
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/imageButton7"
@@ -39,19 +43,26 @@
             android:layout_marginEnd="5dp"
             android:background="@android:color/transparent"
             android:contentDescription="@string/fav"
+            android:padding="10dp"
             android:src="@drawable/heart" />
     </LinearLayout>
+
     <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_margin="10dp"
-        android:src="@drawable/vinyl"
-        />
+        android:scaleType="centerCrop"
+        android:src="@drawable/test"
+        app:shapeAppearanceOverlay="@style/curved"
+        app:strokeColor="@color/md_theme_light_primaryContainer"
+        app:strokeWidth="5dp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
+        android:layout_weight="1"
+        android:gravity="center"
         android:text="@string/track_title"
         android:textAlignment="center"
         android:textSize="20sp" />
@@ -59,28 +70,96 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="horizontal"
-        android:gravity="center">
+        android:layout_weight="1">
+
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             app:icon="@drawable/prev"
-            android:layout_margin="10dp"
-            />
+            app:iconSize="40dp" />
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:icon="@drawable/pause"
-            app:iconSize="64dp"
             android:layout_marginHorizontal="25dp"
-            />
+            app:backgroundTint="@color/md_theme_dark_inversePrimary"
+            app:icon="@drawable/pause"
+            app:iconSize="50dp"
+            app:shapeAppearanceOverlay="@style/curved_btn" />
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:icon="@drawable/next"
             android:layout_margin="10dp"
-            />
+            app:icon="@drawable/next"
+            app:iconSize="40dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:layout_margin="20dp"
+        android:orientation="horizontal"
+        android:layout_weight="1">
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/time_start"
+            android:textSize="15sp" />
+
+        <SeekBar
+            android:id="@+id/seekBar3"
+            android:layout_width="242dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/time_stop"
+            android:textSize="15sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1">
+
+        <ImageButton
+            android:id="@+id/repeatBtnPA"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/loop"
+            android:background="@android:color/transparent"
+            android:layout_weight="1"
+            tools:ignore="NestedWeights" />
+
+        <ImageButton
+            android:id="@+id/equalizerBtnPA"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/equalizer"
+            android:background="@android:color/transparent"
+            android:layout_weight="1" />
+
+        <ImageButton
+            android:id="@+id/timerBtnPA"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/sleep_timer"
+            android:background="@android:color/transparent"
+            android:layout_weight="1"
+ />
     </LinearLayout>
 </LinearLayout>
