--- a/app/src/main/res/layout/activity_favourite.xml
+++ b/app/src/main/res/layout/activity_favourite.xml
@@ -21,9 +21,10 @@
             android:id="@+id/imageButton9"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
+            android:layout_margin="5dp"
             android:background="@android:color/transparent"
             android:src="@drawable/back"
-            android:tint="@color/md_theme_dark_inverseOnSurface" />
+            android:tint="@color/md_theme_light_inverseSurface" />
 
         <TextView
             android:id="@+id/textView6"
