--- a/app/src/main/res/layout/activity_playlist.xml
+++ b/app/src/main/res/layout/activity_playlist.xml
@@ -21,6 +21,7 @@
             android:id="@+id/imageButton9"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
+            android:layout_margin="5dp"
             android:background="@android:color/transparent"
             android:src="@drawable/back"
             android:tint="@color/md_theme_dark_inverseOnSurface" />
