--- a/app/src/main/res/layout/activity_favourite.xml
+++ b/app/src/main/res/layout/activity_favourite.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
-            android:id="@+id/imageButton9"
+            android:id="@+id/backBtnFav"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_margin="5dp"
@@ -36,16 +36,31 @@
             android:textSize="25sp"
             android:textStyle="bold" />
     </LinearLayout>
+    
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/trackListFav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout"
+        android:scrollbars="vertical"
+        android:paddingBottom="40dp"
+        android:layout_marginTop="10dp"
+        />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="780dp"
+        android:layout_marginTop="80dp"
         app:icon="@drawable/mix"
         app:iconSize="35dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:strokeWidth="2dp" />
+        app:layout_constraintVertical_bias="0.9"
+        app:strokeWidth="2dp"
+        android:id="@+id/mix_btn2"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
